--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Arup Sarkar",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "no-kafka": "^3.4.3"
