--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "no-kafka": "^3.4.3"
+    "no-kafka": "^3.4.3",
+    "pg": "^8.0.0"
   },
   "engines": {
     "node": "13.x"
